Fix some spacing issues in the footer

--- a/app/assets/stylesheets/new_design/new_footer.scss
+++ b/app/assets/stylesheets/new_design/new_footer.scss
@@ -32,9 +32,9 @@ footer {
   flex-grow: 1;
   min-width: 280px;
   margin: 0 20px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 
-  @media (max-width: 1000px) {
+  @media (max-width: 550px) {
     width: 100%;
   }
 }
@@ -97,8 +97,23 @@ footer {
 }
 
 .footer-bottom-line {
-  margin-top: 30px;
-  margin-bottom: -30px;
   text-align: center;
   font-size: small;
+
+  @media (max-width: 550px) {
+    text-align: left;
+  }
+}
+
+.footer-row {
+  margin-bottom: 30px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+
+  // In this case, the bottom margin is defined directly on each individual column
+  &.footer-columns {
+    margin-bottom: 0;
+  }
 }
